--- a/course_index.yaml
+++ b/course_index.yaml
@@ -1,7 +1,6 @@
 title: Kubernetes
 description: Learn the basic Kubernetes commands
-display_image: https://miro.medium.com/max/10000/1*wOMtZQ4cb_gxIZ1HkiKOfw.png
-#https://dytvr9ot2sszz.cloudfront.net/wp-content/uploads/2020/06/What-are-the-hardest-parts-of-Kubernetes-to-learn_-1.png
+display_image: https://dytvr9ot2sszz.cloudfront.net/wp-content/uploads/2020/06/What-are-the-hardest-parts-of-Kubernetes-to-learn_-1.png
 labs:
   - title: Create a Kubernetes cluster
     description: Create a Kubernetes cluster
